welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:5: error: not found: value num
	if (num(i) = "9")
            ^